working on type arguments for constructor and method call